Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132173

The cell borders in QTextTableFormat are not being painted.

    XMLWordPrintable

Details

    • Linux/X11
    • 622133ace (dev), a4dc60e9f (6.9), 7b1ed5084 (6.8)

    Description

      A QTextEdit is used to draw a table with text in many cells. The borders of the cells no longer appear after upgrading Qt

      Steps to reproduce the issue:

      1. Build and run the attached example project using Qt 6.6.3 or 6.5.7.
      2. Observe that the cells have red borders.
      3. Rebuild and run the same example project using Qt 6.8.1.
      4. Notice that the red borders are completely missing.

      Attachments

        1. QTBUG-132173.zip
          3 kB
          Chakib Boutaghane
        For Gerrit Dashboard: QTBUG-132173
        # Subject Branch Project Status CR V

        Activity

          People

            srutledg Shawn Rutledge
            chakib Chakib Boutaghane
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes